<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andreas.androidchatclient.view.ConnectActivity"
    android:orientation="vertical"
    android:layout_margin="10pt">

    <TextView
        android:id="@+id/connect_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_text"/>
    <EditText
        android:text="192.168.0.14"
        android:hint="@string/connect_hint"
        android:layout_below="@id/connect_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:id="@+id/host_edit_text"/>
    <TextView
        android:layout_marginTop="5pt"
        android:layout_below="@id/host_edit_text"
        android:id="@+id/username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_text"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/username_label"
        android:hint="@string/chat_name_hint"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:layout_toLeftOf="@id/connect_button"
        android:layout_toStartOf="@id/connect_button" />
    <Button
        android:layout_alignTop="@id/username_edit_text"
        android:layout_marginLeft="5pt"
        android:layout_alignBottom="@id/username_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="connectButtonClicked"
        android:text="@string/connect_button_label"
        android:layout_alignParentRight="true"
        android:id="@+id/connect_button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5pt" />

</RelativeLayout>
